--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Arpit24052003/SMPS">5v 2AMP SMPS design on PCB using Autodesk Eagle</a></h3>
-                <p>This circuit will convert the 220V AC mains to 5V and provide a maximum output current upto 2A </p>
+                <h3 class="heading"><a href="https://github.com/Arpit24052003/STM32-WITH-BLUETOOTH">STM32WB55Ux microcontroller board with bluttooth interfacing</a></h3>
+                <p>This board is based on STM32 microcontroller and capable o communicating wirelessly with having antenna mount enclosure.</p>
               </div>
             </div>
           </div>
@@ -476,7 +476,7 @@
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
 				<a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
-				</a>
+				</a>>
 				<div class="text mt-3 float-right d-block">
   
 				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main">Sales Forecast- Time Series Forecasting</a></h3>
@@ -513,7 +513,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="8">0</strong>
+                <strong class="number" data-number="15">0</strong>
                 <span>Projects</span>
               </div>
             </div>
