--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 					<p class="mt-4">National Institute of Electronics and Information Technology is an autonomous scientific society that's part of the Ministry of Electronics and Information Technology
 						<ul>
 							<li>Learned about Electronics Board Design Basics, Multilayer PCB Design and Semiconductor Packages
-							<li>Drafted schematic and layout for ATMEGA series MICROCONTROLLER BOARDS( 2 layers)</li>
+							<li>Drafted schematic and layout for ATMEGA series microcontroller boards( 2 layers)</li>
 							</ul>
 					</p>
 				</div>
@@ -505,7 +505,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="10">0</strong>
+                <strong class="number" data-number="11">0</strong>
                 <span>Achievements</span>
               </div>
             </div>
@@ -521,7 +521,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="30">0</strong>
+                <strong class="number" data-number="30+">0</strong>
                 <span>Mentored Students</span>
               </div>
             </div>
