--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/Arpit24052003/Home-Automation-System-Using-Arduino-Uno/tree/main">Home Automation Project Using Arduino uno and HC-05 Module</a></h3>
-                <p>It will control 4 different home appliances using Smartphone App through Bluetooth communication</p>
+                <p>It can control 4 different home appliances by using Smartphone App via Bluetooth communication through Ardunio Uno</p>
               </div>
             </div>
           </div>
