--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Arpit24052003/STM32-WITH-BLUETOOTH">STM32WB55Ux microcontroller board with bluttooth interfacing</a></h3>
+                <h3 class="heading"><a href="https://github.com/Arpit24052003/STM32-WITH-BLUETOOTH">STM32WB55Ux microcontroller board with bluetooth interfacing</a></h3>
                 <p>This board is based on STM32 microcontroller and capable o communicating wirelessly with having antenna mount enclosure.</p>
               </div>
             </div>
