--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 						const typingTexts = [
 						'Electrical Engineer  ',
 						'PCB Designer  ',
-						'NUTRITIONIST   ',
+						'Nutritionist  ',
 						];
 
 						// Create a function to display the typing animation for a given text
