--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/12Vv1cspfa99LiyAqGqQF7Tp4ZBltXb4W/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/16t5-9JdK16Q_qjOth2YeeQzHIcRGuEEa/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -521,7 +521,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="30+">0</strong>
+                <strong class="number" data-number="30">0</strong>
                 <span>Mentored Students</span>
               </div>
             </div>
@@ -598,7 +598,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/12Vv1cspfa99LiyAqGqQF7Tp4ZBltXb4W/view?usp=sharing">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/16t5-9JdK16Q_qjOth2YeeQzHIcRGuEEa/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
