--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Bansal circuitry</a>
+	      <a class="navbar-brand" href="index.html">Bansal Circuitry</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -163,6 +163,7 @@
 						'Electrical Engineer  ',
 						'PCB Designer  ',
 						'Nutritionist  ',
+						'Product Developer  ',
 						];
 
 						// Create a function to display the typing animation for a given text
@@ -188,7 +189,7 @@
 
 						<br>
 						<br>
-			            <h2>An Engineering Student </h2>
+			            <h2>An Engineer </h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/arpit-kumar-gupta-a16303230" class="btn btn-primary py-3 px-4">Linkedin</a> 
@@ -221,7 +222,7 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Arpit Kumar Gupta</span></p>
-										<p><span class="title-s">Job Role: </span> <span>PCB Designer</span></p>
+										<p><span class="title-s">Job Role: </span> <span>PCB Design Engineer</span></p>
 										<p><span class="title-s">Experience: </span> <span>9 months</span></p>
 										<p><span class="title-s">Address: </span> <span>jaipur, India</span></p>
 									  </div>
@@ -230,7 +231,7 @@
 
 								<div class="skill-mf">
 									<p class="title-s">Skills</p>
-									<span>PCB design</span> <span class="pull-right">90%</span>
+									<span>Hardware design</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="95" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -272,18 +273,19 @@
 								<h2 class="mb-4">About Me</h2>
 								
 								<p> I am an Electrical Engineering student with a keen interest in PCB design.
-	                                I have applied my expertise in PCB design by creating various projects(schematics, layout
-									and PCB routing) using software tools like Eagle and Ki-CAD. I have worked in the core industry of PCB design
-								    and manufacturing with an hands on experience of 9 months.I am currently working as a freelancer for PHIL'S LAB.
-									I have also automated a system on a project of "Vaccine Development" using Ladder Logic PLC programming on Siemens TIA Portal as a final project </p>
+	                                I have applied my expertise in Product developement by creating various industrial projects(schematics, layout
+									PCB routing, firmware, 3-D Designing) using software tools like Eagle,Ki-CAD,Fusion 360.I have also developed a new device called "Atomlink24" which can be used for firmware and protocol testing.
+									I have worked in the core industry of PCB design and manufacturing with an hands on experience of 1.5 years.I am currently working as a Hardware engineer for Sunstar Industries which is 
+									one the largest Electricity meter manufacturing company in Rajasthan.
+									I have also automated a system on a project of "Vaccine Development" using Ladder Logic PLC programming on Siemens TIA Portal as a final project in Engineering</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Electrical &amp; Electronics Engineer</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Power System &amp; Semiconductors</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
-									<li class="d-flex"><span>Tools:</span> <span>Autodesk Eagle,Ki-CAD,Altium Designer,Ardunio IDE &amp; Siemens TIA Portal,Logicxpro Simulation</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>System Engineering, Circuit Designing, Component Placement, &amp; Ladder Logic</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Traveling,Cinematography,Fitness and Nutrition</span></li>
+									<li class="d-flex"><span>Tools:</span> <span>Autodesk Eagle,Ki-CAD,Altium Designer,Ardunio IDE, Siemens TIA Portal, Autodesk fusion 360,  &amp; Autocad Electrical</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>System Engineering, Circuit Designing, &amp;  Product Developement </span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Travelling,Cinematography,Fitness and Nutrition</span></li>
 									
 								</ul>
 							</div>
@@ -293,7 +295,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="15">0</span> <span>+</span>
+									<span class="number" data-number="30">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/arpit-kumar-gupta-a16303230" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -314,7 +316,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Electrical Engineering Student | PCB Designer | Fitness & Nutrition Expert | Visual Storyteller and Cinemategrapher</p>
+            <p>Electrical Engineering Student | Hardware Designer | Fitness & Nutrition Expert | Visual Storyteller and Cinemategrapher</p>
           </div>
         </div>
 
@@ -358,7 +360,7 @@
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
 					<span class="date">2023-2024</span>
-					<h2>PCB Designer intern</h2>
+					<h2>Hardware Design engineer</h2>
 					<span class="position">Sunstar Meters</span>
 					<p class="mt-4">Sunstar meters is endeavored to manufacture, export and supply a technically enhanced range
 						 of Energy Meter (Single Phase Meter and Three Phase Meter) 
@@ -378,7 +380,7 @@
 					<p class="mt-4">PHIL'S LAB offer full-stack hardware consulting services, from system-level design, analogue and digital circuit design, simulation, PCB design, manufacturing and documentation.
 						<ul>
 							<li>Located and resolved mechanical design issues in few Circuit Boards </li>
-							<li>Worked on few STM32 and ATMEGA328P microcontroller boards.</li>
+							<li>Worked on STM32 and ATMEGA328P microcontroller boards.</li>
 							</ul>
 					</p>
 				</div>
@@ -433,7 +435,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
             <h2 class="mb-4">Projects</h2>
-            <p>Below are my sample electronics projects on Circuit Analysis, Home Automation and PCB Design</p>
+            <p>Below are my sample electronics projects on Circuit Analysis, Home Automation and Mix signal PCB Design</p>
           </div>
         </div>
         <div class="row d-flex">
@@ -466,7 +468,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/Arpit24052003/STM32-WITH-BLUETOOTH">STM32WB55Ux microcontroller board with bluetooth interfacing</a></h3>
-                <p>This board is based on STM32 microcontroller and capable o communicating wirelessly with having antenna mount enclosure.</p>
+                <p>This board is based on STM32 microcontroller and capable of communicating wirelessly with having a antenna mount enclosure.</p>
               </div>
             </div>
           </div>
@@ -514,7 +516,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="15">0</strong>
+                <strong class="number" data-number="30">0</strong>
                 <span>Projects</span>
               </div>
             </div>
@@ -599,7 +601,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/16t5-9JdK16Q_qjOth2YeeQzHIcRGuEEa/view?usp=sharing">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1c1ECR-8z-dHsotpPVoaJsljTm4jNrWTh/view?usp=drive_link">resumelink</a></p>
 	          </div>
           </div>
 
