--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span>Arpit Kumar Gupta</span></p>
 										<p><span class="title-s">Job Role: </span> <span>PCB Design Engineer</span></p>
-										<p><span class="title-s">Experience: </span> <span>9 months</span></p>
+										<p><span class="title-s">Experience: </span> <span>1.5 Years</span></p>
 										<p><span class="title-s">Address: </span> <span>jaipur, India</span></p>
 									  </div>
 									</div>
