--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="https://drive.google.com/file/d/16t5-9JdK16Q_qjOth2YeeQzHIcRGuEEa/view?usp=sharing" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="https://drive.google.com/file/d/1c1ECR-8z-dHsotpPVoaJsljTm4jNrWTh/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
